--- a/6.10.0.md
+++ b/6.10.0.md
@@ -3,10 +3,10 @@
 - Compatible with *sf-core@^3.1.0*
 - Compatible with *@smartface/contx@^1.4.3*
 
-#### [v6.10.0](https://developer.smartface.io/blog/release-notes-672)
+#### <a href="https://developer.smartface.io/blog/release-notes-672" target="_blank" >v6.10.0</a>
 
 - Add borderVisibility property of the HeaderBar
 - Add Object.defineProperty snippet
 - Fix autosize of the ScrollView
 - Fix image scaling for iPhoneX when using the emulator
-- Fix [Go to Code](https://developer.smartface.io/docs/easy-switching-between-visual-design-mode-source-code) feature when no component is selected
+- Fix <a href="https://developer.smartface.io/docs/easy-switching-between-visual-design-mode-source-code" target="_blank" >Go to Code</a> feature when no component is selected
