--- a/6.11.1.md
+++ b/6.11.1.md
@@ -9,6 +9,7 @@
 
 #### <a href="https://developer.smartface.io/blog/release-notes-6100" target="_blank" >v6.11.0</a>
 
+- Improved explorer experience
 - Fixed adding or removing component
 - Fixed scrollview autosize calculation
 - Added language option to rule hint
