--- a/6.11.0.md
+++ b/6.11.0.md
@@ -3,8 +3,9 @@
 - Compatible with *sf-core@^3.2.0*
 - Compatible with *@smartface/contx@^2.0.0*
 
-#### v6.11.0
+#### <a href="https://developer.smartface.io/blog/release-notes-6100" target="_blank" >v6.11.0</a>
 
+- Improved explorer experience
 - Fixed adding or removing component
 - Fixed scrollview autosize calculation
 - Added language option to rule hint
