--- a/6.12.0.md
+++ b/6.12.0.md
@@ -3,13 +3,13 @@
 - Compatible with *sf-core@^3.2.1*
 - Compatible with *@smartface/contx@^2.0.3*
 
-#### v6.12.0
+#### <a href="https://developer.smartface.io/blog/release-notes-6101" target="_blank" >v6.12.0</a>
 
 - Added default style to Android StatusBar. 
 - Added LARGE view style to iOS ActivityIndicator.
 - Added initialized property to library component.
     - If initialized value is true, library component user file will not be created.   
-- Removed *borderVisibility* property in attributes.
+- Removed **borderVisibility** property in attributes.
 - Fixed rendering of library page when component has relative postion type.
-- Fixed AUTO value of *alignItems* property
+- Fixed AUTO value of **alignItems** property
 - Fixed explorer autofocus.
