--- a/6.12.0.md
+++ b/6.12.0.md
@@ -7,6 +7,7 @@
 
 - Added default style to Android StatusBar. 
 - Added LARGE view style to iOS ActivityIndicator.
+- Added **cursorColor** property to SearchView for both platform.
 - Added initialized property to library component.
     - If initialized value is true, library component user file will not be created.   
 - Removed **borderVisibility** property in attributes.
