--- a/6.12.0.md
+++ b/6.12.0.md
@@ -14,3 +14,14 @@
 - Fixed rendering of library page when component has relative postion type.
 - Fixed AUTO value of **alignItems** property
 - Fixed explorer autofocus.
+<br/>
+<br/>
+
+#### Marketplace - beta  🎉🎉🎉
+
+We are excited about to announce marketplace - beta 
+
+- export any library components and pages then publish them to marketplace
+- store most commonly used components or pages on marketplace.
+- use any components or pages from marketplace
+- share your components or pages with other users via marketplace.
