--- a/6.12.0.md
+++ b/6.12.0.md
@@ -3,17 +3,15 @@
 - Compatible with *sf-core@^3.2.1*
 - Compatible with *@smartface/contx@^2.0.3*
 <br/>
-<br/>
 
-#### Marketplace - beta  🎉🎉🎉
+#### Marketplace (BETA)
 
-We are excited about to announce marketplace - beta 
+We are excited to announce marketplace 🎉🎉🎉
 
-- export any library components and pages then publish them to marketplace
-- store most commonly used components or pages on marketplace.
-- use any components or pages from marketplace
-- share your components or pages with other users via marketplace.
-<br/>
+- Export any library component or page & publish them to marketplace.
+- Store most commonly used components or pages on marketplace.
+- Use any components or pages from marketplace.
+- Share your components or pages with other users via marketplace.
 <br/>
 
 #### <a href="https://developer.smartface.io/blog/release-notes-6101" target="_blank" >v6.12.0</a>
@@ -27,4 +25,3 @@ We are excited about to announce marketplace - beta
 - Fixed rendering of library page when component has relative postion type.
 - Fixed AUTO value of **alignItems** property
 - Fixed explorer autofocus.
-
