--- a/6.13.0.md
+++ b/6.13.0.md
@@ -2,12 +2,11 @@
 
 - Compatible with *sf-core@^4.0.0*
 - Compatible with *@smartface/contx@^2.1.0*
-<br/>
 
 #### <a href="https://developer.smartface.io/blog/release-notes-6110" target="_blank" >v6.13.0</a>
 
 - Added <a href="https://developer.smartface.io/docs/shimmerflexlayout#section-adding-shimmer-flexlayout-using-ui-editor" target="_blank" >ShimmerFlexLayout</a> component.
 - Added console.[info, error, warn] support.
-- Added **transparent**, **ios.translucent** properties of HedaerBar.
+- Added **transparent**, **ios.translucent** properties of HeaderBar.
 - Added new page creation flow.
-- Fixed TextView component.
+- Fixed rendering of TextView component.
